--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <div class="alert alert-danger col-lg-6 col-12 d-none" id="feedback-rut">
                     El rut ingresado no es válido
                 </div>
+                <div class="alert alert-danger col-lg-6 col-12 d-none" id="feedback-dv">
+                    El dígito verificador ingresado no es válido
+                </div>
                 <div class="col-12 mb-3">
                     <label for="nombre" class="form-label">Nombre</label>
                     <input type="text" class="form-control" id="nombre" maxlength="30" required>
